# cardinal-staking

./: Anchor.toml  Makefile  README.md  index.html  modules.html  package-lock.json  package.json
assets/: search.js
enums/: rewardDistributor.RewardDistributorKind.html  stakePool.ReceiptType.html
modules/: receiptManager.accounts.html  receiptManager.html  receiptManager.instruction.html  receiptManager.pda.html  receiptManager.transaction.html  rewardDistributor.accounts.html  rewardDistributor.html  rewardDistributor.instruction.html  rewardDistributor.pda.html  rewardDistributor.transaction.html  stakePool.accounts.html  stakePool.html  stakePool.instruction.html  stakePool.pda.html  stakePool.transaction.html
programs/cardinal-group-reward-distributor/: Cargo.toml
programs/cardinal-group-reward-distributor/src/: errors.rs  lib.rs  state.rs
programs/cardinal-group-reward-distributor/src/instructions/: claim_group_rewards.rs  close_group_reward_counter.rs  close_group_reward_distributor.rs  close_group_reward_entry.rs  init_group_reward_counter.rs  init_group_reward_distributor.rs  init_group_reward_entry.rs  mod.rs  reclaim_group_funds.rs  update_group_reward_distributor.rs  update_group_reward_entry.rs
programs/cardinal-receipt-manager/: Cargo.toml
programs/cardinal-receipt-manager/src/: errors.rs  lib.rs  state.rs
programs/cardinal-receipt-manager/src/instructions/: claim_reward_receipt.rs  init_reward_receipt.rs
src/: accounts.ts  api.ts  errors.ts  utils.ts
tests/: create-entry-close-pool.spec.ts  creator-allowlist.spec.ts  custom-deafultMultiplier-demiclas.spec.ts  default-multiplier-decimals.spec.ts  fungible-staking-add-amount.spec.ts  fungible-staking-add-during-cooldown.spec.ts  fungible-staking.spec.ts  group-stake-claim-rewards.spec.ts  init-entry-stake-receipts.spec.ts  init-entry-stake.spec.ts  init-pool-stake-unstake-with-reset.spec.ts  max-reward-seconds.spec.ts  pool-with-cooldown.spec.ts  pool-with-minimum-stake.spec.ts  reassign-staker.spec.ts  receipt-manager-claim-reward-receipt.spec.ts  receipt-manager-multiple-disallowed.spec.ts  receipt-manager-update-close.spec.ts  reclaimFunds.spec.ts  resize-stake-entry.spec.ts  resize_stake_entry.spec.ts  rewards-multiplier-test.spec.ts  stake-authorization-record.spec.ts  stake-booster-boost.spec.ts  stake-booster-close.spec.ts  stake-but-pool-is-closed.spec.ts  stake-claim-rewards-treasury.spec.ts  stake-claim-rewards.spec.ts  stake-deauthorization-record.spec.ts  stake-no-receipts.spec.ts  stake-permissionless-claim-rewards.spec.ts  stake-pool-count.spec.ts  stake-receipt-none.spec.ts  stake-receipts-claim-rewards-treasury.spec.ts  stake-receipts.spec.ts  stake-rewards-close.spec.ts  stake-treasury-max-supply.spec.ts  stake.spec.ts  update-reward-distributor.spec.ts  utils.ts  (+1 more)
tools/: README.md  checkMultiplier.ts  checkStakeEntry.ts  checkZeros.ts  checkZerosStakeEntries.ts  checkZerosStakePool.ts  claimRewardsForUsers.ts  cli.ts  closePool.ts  closePools.ts  closePools.tsx  connection.ts  createFungibleToken.ts  defaultRewardDistributor.ts  fillEntryZeros.ts  fillPoolZeros.ts  getMetadataForPoolTokens.ts  initializeEntries.ts  initializeEntriesAndSetMultipliers.ts  metadata.ts  migrateBatchedRewardEntries.ts  migrateRewardEntries.ts  reclaimFunds.ts  resizeEntries.ts  savePoolData.ts  stakedTokensBreakdown.ts  utils.ts  (+6 more)
(+189 files in other folders)
