[package]
name = "cardinal-group-reward-distributor"
version = "1.13.0"
description = "Cardinal group reward distributor"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-staking/tree/main/programs/cardinal-group-reward-distributor"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal", "stake", "pool"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_group_reward_distributor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
solana-program = "=1.10.29"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "=1.3.3", features = ["no-entrypoint"] }
cardinal-stake-pool = { version = "^1.13.0", path = "../cardinal-stake-pool", features = ["cpi"] }
cardinal-reward-distributor = { version = "^1.13.0", path = "../cardinal-reward-distributor", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }
