[package]
name = "cardinal-receipt-manager"
version = "1.15.0"
description = "Cardinal reward receipt manager"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-staking/tree/main/programs/cardinal-receipt-manager"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal", "reward", "receipt", "manager"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_receipt_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
solana-program = "=1.10.29"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
cardinal-stake-pool = { version = "^1.15.0", path = "../cardinal-stake-pool", features = ["cpi"] }
cardinal-payment-manager = { version = "^2.1.1", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }
